# Pybeaut

./: .gitignore  README.md  pybeaut.py  pyproject.toml
pybeaut/: __init__.py
