[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
authors = [{name = "Backest", email = "alvarodrumer54@gmail.com"}, {name= "TheWisker", email = "thewisker@protonmail.com"}]
name = "pybeaut"
description = "A python library for styling terminal outputs"
version = "1.1"
readme = "README.md"
requires-python = ">=3.10.8"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Natural Language :: Spanish",
  "Typing :: Typed",
]

keywords = [
  "Python",
  "Python3",
  "Python-tools",
  "Miscellaneous tools"
]


[project.urls]
"Author repository" = "https://github.com/Backist/"
"Collaborator repository" = "https://github.com/TheWisker/"
"repository" = "https://github.com/Backist/pybeaut"
"Bug issues" = "https://github.com/Backist/pybeaut/issues" 


[tool.mypy]
python_version = "3.10.2"
strict = true